Bug: Materials using Object coordinates causes "Override Auto Resync" to remove data-blocks #100586

Closed
opened 2022-08-23 14:07:11 +02:00 by Nick Alberelli · 4 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3070 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.79

Blender Version
Broken: version: 3.3.0 Beta, branch: master, commit date: 2022-08-22 16:15, hash: 4fecf652e2
Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-08-22 16:16, hash: 7f6cd405b9
Worked: unknown

Short description of error: If a linked object's material references an empty, it will cause other data-blocks to be removed without warning when reopening the Blend File.

Long description of error:
Under very specific conditions, linking certain kinds of data causes the "Override Auto Resync" to remove a collection. In our case a collection named LibA that contains ; object & material, the material uses a texture coordinate node which references the location of an empty. This LibA collection is the linked into a SCENE file. A second arbitrary asset LibB is also linked into the collection.

Now the file contains 2 LINKED collections:

  • LibA(object's material references an empty)
  • LibB (any other asset)

If the LibB file is renamed the function "Override Auto Resync" is called when this SCENE file is reopened. During this function if the LibB blend file was renamed it will be removed without warning.

Exact steps for others to reproduce the error

  1. Create LibA.blend File with LibA collection with a material
  2. Add a texture coordinate node that references an empty to object in Collection LibA
  3. Create LibB.blend File with LibB collection with any data
  4. Create a Scene file that references LibA.blend's LibA Collection and LibB.blend's LibB Collection
  5. Create Library Override on LibA + LibB
  6. Rename LibB.blend file
  7. Enable "Override Auto Resync"
  8. Reload Scene.blend
  9. LibB Collection will be removed from outliner

Exact steps for others to reproduce the error
Based on files: override - tester.blends.zip

  1. Open SCENE.blend notice the reported error after LibB is renamed
  2. Enable "Override Auto Resync" if not already enabled
  3. Reload Scene.blend
  4. LibB Collection will be removed from outliner
**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3070 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.79 **Blender Version** Broken: version: 3.3.0 Beta, branch: master, commit date: 2022-08-22 16:15, hash: `4fecf652e2` Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-08-22 16:16, hash: `7f6cd405b9` Worked: unknown **Short description of error:** If a linked object's material references an empty, it will cause other data-blocks to be removed without warning when reopening the Blend File. **Long description of error:** Under very specific conditions, linking certain kinds of data causes the "[Override Auto Resync](https://developer.blender.org/T83811 )" to remove a collection. In our case a collection named LibA that contains ; object & material, the material uses a texture coordinate node which references the location of an empty. This LibA collection is the linked into a SCENE file. A second arbitrary asset LibB is also linked into the collection. Now the file contains **2** LINKED collections: - LibA(object's material references an empty) - LibB (any other asset) If the LibB file is renamed the function "[Override Auto Resync](https://developer.blender.org/T83811 )" is called when this SCENE file is reopened. During this function if the LibB blend file was renamed it will be removed without warning. **Exact steps for others to reproduce the error** 1. Create LibA.blend File with LibA collection with a material 2. Add a texture coordinate node that references an empty to object in Collection LibA 3. Create LibB.blend File with LibB collection with any data 4. Create a Scene file that references LibA.blend's LibA Collection and LibB.blend's LibB Collection 5. Create Library Override on LibA + LibB 6. Rename LibB.blend file 7. Enable "[Override Auto Resync](https://developer.blender.org/T83811 )" 8. Reload Scene.blend 9. LibB Collection will be removed from outliner **Exact steps for others to reproduce the error** Based on files: [override - tester.blends.zip](https://archive.blender.org/developer/F13413441/override_-_tester.blends.zip) 1. Open SCENE.blend notice the reported error after LibB is renamed 2. Enable "[Override Auto Resync](https://developer.blender.org/T83811 )" if not already enabled 3. Reload Scene.blend 4. LibB Collection will be removed from outliner
Author

Added subscriber: @TinyNick

Added subscriber: @TinyNick
Nick Alberelli changed title from Bug: Materials using Object coordinates causes "Override Auto Resync" will remove data-blocks to Bug: Materials using Object coordinates causes "Override Auto Resync" to remove data-blocks 2022-08-23 14:07:27 +02:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by f3186389b0

This issue was referenced by f3186389b0094b0478df5adb2da917ac722acd7f

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2022-08-30 15:18:31 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#100586
No description provided.