Fix T100586: libOverride resync could remove too many data-blocks.

Do not delete 'orphaned' overrides when their reference is missing
because the library file itself is missing.